Convert plaintext passwords to encrypted format using PasswordEncoder and handle thread synchronization.